upgrade to flutter 3.24.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: root_workspace
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
+  sdk: ^3.5.3
+
 
 dev_dependencies:
-  melos: ^3.1.1
+  melos: ^6.1.0
 
 scripts:
   analyze:
