--- a/form_bloc_web/pubspec.yaml
+++ b/form_bloc_web/pubspec.yaml
@@ -4,27 +4,26 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
-  flutter: ">=3.7.0"
+  sdk: ^3.5.3
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_bloc: ^0.31.0
-  animations: ^2.0.7
-  flutter_syntax_view: ^4.0.0
-  flash: ^3.0.5+1
-  url_launcher: ^6.1.12
-  flutter_markdown: ^0.6.17+1
-  auto_size_text: ^3.0.0-nullsafety.0
+  flutter_form_bloc: ^0.32.0
+  animations: ^2.0.11
+  flutter_syntax_view: ^4.1.0
+  flash: ^3.1.1
+  url_launcher: ^6.3.0
+  flutter_markdown: ^0.7.3+2
+  auto_size_text: ^3.0.0
   liquid_progress_indicator_v2: ^0.5.0
-  rxdart: ^0.27.7
-  google_fonts: ^5.1.0
+  rxdart: ^0.28.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
