--- a/packages/flutter_form_bloc/pubspec.yaml
+++ b/packages/flutter_form_bloc/pubspec.yaml
@@ -1,27 +1,27 @@
 name: flutter_form_bloc
 description: Create Beautiful Forms in Flutter. The easiest way to Prefill, Async Validation, Update Form Fields, and Show Progress, Failures or Navigate by Reacting to the Form State.
-version: 0.31.0
+version: 0.32.0
 homepage: https://github.com/GiancarloCode/form_bloc/tree/master/packages/flutter_form_bloc
 repository: https://github.com/GiancarloCode/form_bloc/tree/master/packages/flutter_form_bloc
 issue_tracker: https://github.com/GiancarloCode/form_bloc/issues
 
 environment:
-  sdk: '>=2.12.0 <4.0.0'
+  sdk: ^3.5.3
 
 dependencies:
   flutter:
     sdk: flutter
 
-  flutter_bloc: ^8.0.1
-  form_bloc: ^0.31.0
-  equatable: ^2.0.3
-  rxdart: ^0.27.3
-  flutter_keyboard_visibility: ^5.4.1
-  collection: ^1.15.0
-  intl: ^0.18.0
+  flutter_bloc: ^8.1.6
+  form_bloc: ^0.32.0
+  equatable: ^2.0.5
+  rxdart: ^0.28.0
+  flutter_keyboard_visibility: ^6.0.0
+  collection: ^1.18.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
