--- a/packages/form_bloc/pubspec.yaml
+++ b/packages/form_bloc/pubspec.yaml
@@ -1,24 +1,24 @@
 name: form_bloc
 description: 'Easy Form State Management using BLoC pattern. Separate the Form State and Business Logic from the User Interface. Async Validation, Progress, Dynamic fields, and more.'
-version: 0.31.0
+version: 0.32.0
 homepage: 'https://github.com/GiancarloCode/form_bloc/tree/master/packages/form_bloc'
 repository: 'https://github.com/GiancarloCode/form_bloc/tree/master/packages/form_bloc'
 issue_tracker: 'https://github.com/GiancarloCode/form_bloc/issues'
 
 environment:
-  sdk: '>=2.12.0 <4.0.0'
+  sdk: ^3.5.3
 
 dependencies:
-  meta: ^1.7.0
-  bloc: ^8.0.1
-  rxdart: ^0.27.3
-  equatable: ^2.0.3
-  collection: ^1.15.0
-  uuid: ^3.0.4
+  meta: ^1.15.0
+  bloc: ^8.1.4
+  rxdart: ^0.28.0
+  equatable: ^2.0.5
+  collection: ^1.18.0
+  uuid: ^4.5.1
 
 dev_dependencies:
-  test: ^1.20.1
-  mocktail: ^0.2.0
-  bloc_test: ^9.0.2
-  fire_line_diff: ^1.5.3
-  lints: ^2.0.0
+  test: ^1.25.8
+  mocktail: ^1.0.4
+  bloc_test: ^9.1.7
+  fire_line_diff: ^1.5.5
+  lints: ^5.0.0
