--- a/packages/form_bloc/example/pubspec.yaml
+++ b/packages/form_bloc/example/pubspec.yaml
@@ -4,10 +4,10 @@ version: 1.0.0+1
 publish_to: 'none'
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
+  sdk: "^3.5.3"
 
 dependencies:
-  form_bloc: ^0.30.0
+  form_bloc: ^0.32.0
 
 dev_dependencies:
   lints: ^1.0.1
