--- a/packages/flutter_form_bloc/example/pubspec.yaml
+++ b/packages/flutter_form_bloc/example/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_bloc: ^0.32.0
+  flutter_form_bloc:
+    path: ../
 
 dev_dependencies:
   flutter_test:
