--- a/packages/flutter_form_bloc/pubspec.yaml
+++ b/packages/flutter_form_bloc/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   rxdart: '>=0.28.0 <0.29.0'
   flutter_keyboard_visibility: ^6.0.0
   collection: ^1.19.0
-  intl: '>=0.20.0 <0.21.0'
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
